--- a/Resume.html
+++ b/Resume.html
@@ -12,7 +12,7 @@
 	<header id="body-header">
 		<nav>
 			<ul class="horizontal-list text-center nav-menu">
-				<li><a href="#">Home12345</a></li>
+				<li><a href="#">Home</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#education">Education</a></li>
