Responsive First Breakpoint

--- a/Resume.html
+++ b/Resume.html
@@ -81,27 +81,19 @@
 				
 				<div class="timeline">
 
-					<div class="timeline-box experience-box"><h2>
-							<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
-						Designation</h2>
+					<div class="timeline-box experience-box"><h2>Designation</h2>
 						<h3>Company Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p></div>
-					<div class="timeline-box experience-box"><h2>
-							<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
-						Designation</h2>
+					<div class="timeline-box experience-box"><h2>Designation</h2>
 						<h3>Company Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p></div>
-					<div class="timeline-box experience-box"><h2>
-							<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
-						Designation</h2>
+					<div class="timeline-box experience-box"><h2>Designation</h2>
 						<h3>Company Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p></div>
-					<div class="timeline-box experience-box"><h2>
-							<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
-						Designation</h2>
+					<div class="timeline-box experience-box"><h2>Designation</h2>
 						<h3>Company Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p></div>	
@@ -121,28 +113,23 @@
 				
 				<div class="timeline">
 
-					<div class="timeline-box">
-						<h2>
-							<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000032_1550746413_iiitd_logo.png">
-						Degree</h2>
+					<div class="timeline-box education-box">
+						<h2>Degree</h2>
 						<h3>Institute Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p>
 					</div>
-					<div class="timeline-box">
-						<h2><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000032_1550746413_iiitd_logo.png">
-						Degree</h2>
+					<div class="timeline-box education-box">
+						<h2>Degree</h2>
 						<h3>Institute Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p>
 					</div>
-					<div class="timeline-box"><h2>
-					<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000032_1550746413_iiitd_logo.png">Degree</h2>
+					<div class="timeline-box education-box"><h2>Degree</h2>
 						<h3>Institute Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p></div>
-					<div class="timeline-box"><h2>
-					<img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000032_1550746413_iiitd_logo.png">Degree</h2>
+					<div class="timeline-box education-box"><h2>Degree</h2>
 						<h3>Institute Name</h3>
 						<p>Month YYYY - Month YYYY</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</p></div>	
