--- a/Resume.html
+++ b/Resume.html
@@ -11,7 +11,7 @@
 
 	<header id="body-header">
 		<nav>
-			<ul class="horizontal-list text-center nav-menu">
+			<ul class="horizontal-list text-center nav-menu header-menu">
 				<li><a href="#">Home</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#skills">Skills</a></li>
@@ -20,6 +20,22 @@
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
+			
+			<div class="dropdown">
+				<a href="#dropdown-items"><i class="fa-solid fa-bars"></i></a>
+			</div>
+			
+			<div id="dropdown-items">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#education">Education</a></li>
+					<li><a href="#experience">Exerience</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
 		</nav>
 
 		<h1 class="text-center">Ayush Sharma</h1>
