--- a/Resume.html
+++ b/Resume.html
@@ -26,12 +26,12 @@
 			</div>
 			
 			<div id="dropdown-items">
-				<ul>
+				<ul class="nav-menu">
 					<li><a href="#">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#skills">Skills</a></li>
 					<li><a href="#education">Education</a></li>
-					<li><a href="#experience">Exerience</a></li>
+					<li><a href="#experience">Experience</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
