--- a/Resume.html
+++ b/Resume.html
@@ -65,25 +65,25 @@
 					<span>Skills</span>
 				</h1>
 		
-			<div class="skills-display">
+			<div id="skills-container" class="skills-display">
 				<div class="skill-progress">
-				<div class="eighty-five-percent mb-blue"><div class="skill-name"><span>C++</span></div></div>
+				<div class="eighty-five-percent mb-blue" data-bar-width="85"><div class="skill-name"><span>C++</span></div></div>
 			</div>
 				<div class="skill-progress">
-				<div class="sixty-five-percent mb-orange"><div class="skill-name"><span>HTML</span></div></div>
+				<div class="sixty-five-percent mb-orange" data-bar-width="65"><div class="skill-name"><span>HTML</span></div></div>
 			</div>
 				<div class="skill-progress">
-				<div class="eigthy-percent mb-purple"><div class="skill-name"><span>Android</span></div></div>
+				<div class="eigthy-percent mb-purple" data-bar-width="85"><div class="skill-name"><span>Android</span></div></div>
 			</div>
 				
 				<div class="skill-progress">
-				<div class="fifty-percent mb-green"><div class="skill-name"><span>CSS</span></div></div>
+				<div class="fifty-percent mb-green" data-bar-width="55"><div class="skill-name"><span>CSS</span></div></div>
 			</div>
 				<div class="skill-progress flexgrow">
-				<div class="eighty-five-percent mb-blue "><div class="skill-name"><span>JAVA</span></div></div>
+				<div class="eighty-five-percent mb-blue " data-bar-width="85"><div class="skill-name"><span>JAVA</span></div></div>
 			</div>
 				<div class="skill-progress flexgrow">
-				<div class="eigthy-percent mb-purple "><div class="skill-name"><span>NODEJS</span></div></div>
+				<div class="eigthy-percent mb-purple" data-bar-width="80"><div class="skill-name"><span>NODEJS</span></div></div>
 			</div>
 			</div>
 
