Bar scroll Added

--- a/Resume.html
+++ b/Resume.html
@@ -22,20 +22,23 @@
 			</ul>
 			
 			<div class="dropdown">
-				<a href="#dropdown-items"><i class="fa-solid fa-bars"></i></a>
+				<!-- <a href="#dropdown-items"><i class="fa-solid fa-bars"></i></a> -->
+				<i class="fas fa-bars"></i>
+				<div class="dropdown-items">
+					<ul class="nav-menu">
+						<li><a href="#">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#education">Education</a></li>
+						<li><a href="#experience">Experience</a></li>
+						<li><a href="#portfolio">Portfolio</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</div>
 			</div>
+
 			
-			<div id="dropdown-items">
-				<ul class="nav-menu">
-					<li><a href="#">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#skills">Skills</a></li>
-					<li><a href="#education">Education</a></li>
-					<li><a href="#experience">Experience</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div>
+			
 		</nav>
 
 		<h1 class="text-center">Ayush Sharma</h1>
@@ -67,23 +70,23 @@
 		
 			<div id="skills-container" class="skills-display">
 				<div class="skill-progress">
-				<div class="eighty-five-percent mb-blue" data-bar-width="85"><div class="skill-name"><span>C++</span></div></div>
+				<div class="eighty-five-percent mb-blue" data-bar-width="85" data-visited="false"><div class="skill-name"><span>C++</span></div></div>
 			</div>
 				<div class="skill-progress">
-				<div class="sixty-five-percent mb-orange" data-bar-width="65"><div class="skill-name"><span>HTML</span></div></div>
+				<div class="sixty-five-percent mb-orange" data-bar-width="65" data-visited="false"><div class="skill-name"><span>HTML</span></div></div>
 			</div>
 				<div class="skill-progress">
-				<div class="eigthy-percent mb-purple" data-bar-width="85"><div class="skill-name"><span>Android</span></div></div>
+				<div class="eigthy-percent mb-purple" data-bar-width="85" data-visited="false"><div class="skill-name"><span>Android</span></div></div>
 			</div>
 				
 				<div class="skill-progress">
-				<div class="fifty-percent mb-green" data-bar-width="55"><div class="skill-name"><span>CSS</span></div></div>
+				<div class="fifty-percent mb-green" data-bar-width="55" data-visited="false"><div class="skill-name"><span>CSS</span></div></div>
 			</div>
 				<div class="skill-progress flexgrow">
-				<div class="eighty-five-percent mb-blue " data-bar-width="85"><div class="skill-name"><span>JAVA</span></div></div>
+				<div class="eighty-five-percent mb-blue " data-bar-width="85" data-visited="false"><div class="skill-name"><span>JAVA</span></div></div>
 			</div>
 				<div class="skill-progress flexgrow">
-				<div class="eigthy-percent mb-purple" data-bar-width="80"><div class="skill-name"><span>NODEJS</span></div></div>
+				<div class="eigthy-percent mb-purple" data-bar-width="80" data-visited="false"><div class="skill-name"><span>NODEJS</span></div></div>
 			</div>
 			</div>
 
