--- a/Resume.html
+++ b/Resume.html
@@ -58,7 +58,7 @@
 			<div id="my-image">
 			<img src="Images/Photo.jpg">
 		</div>
-			<p>I am a very Hardworking person, eager to learn and get better. Started as a <span class="text-highlight">Manual QA </span>engineer, worked few months in <span class="text-highlight">Automation</span> and then worked as a <span class="text-highlight">QA and Dev Hybrid</span> Engineer. As I got more interest in Development. Completed a course from Coding Ninja for <span class="text-highlight">Full Stack Development.</span></p>
+			<p>Passionate to learn new technologies and to excel innovative technology applications, seeking a challenging position which will enable me to continuously learn, create, innovate and simultaneously contribute to the short- and long-term goals of the organization.</p>
 			
 		</section>
 		<section id="skills">
